# waterFrontLineDetect_RG

./: CMakeLists.txt  README.md
include/: RegionGrowth.h
old/: bankDetect.cpp  bankDetect.h  logger.cpp  logger.h  main.cpp
src/: RegionGrowth.cpp
